# finalproject_Sozinova_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
valutatrade_hub/: main.py
valutatrade_hub/cli/: constants.py  interface.py  storage.py
valutatrade_hub/cli/manager/: portfolio.py  rate.py  user.py
valutatrade_hub/core/: currencies.py  decorators.py  exceptions.py  usecases.py  utils.py
valutatrade_hub/core/models/: currency.py  portfolio.py  user.py  wallet.py
valutatrade_hub/infra/: logging_config.py  settings.py
valutatrade_hub/parser/: api_clients.py  config.py  updater.py
