[tool.poetry]
name = "finalproject-sozinova-m25-555"
version = "0.1.0"
description = ""
authors = ["Uliana Sozinova <uliana.so-dev@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
asciinema = "^2.4.0"
requests = "^2.32.5"

[tool.poetry.scripts]
valutatrade = "valutatrade_hub.main:main" 

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.11,<0.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"